# fastblog

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  aerich.ini  pyproject.toml  sample.env
backend/app/: __main__.py  constants.py  fastblog.py  middleware.py  schemas.py
backend/app/routers/: auth.py  posts.py
backend/migrations/models/: 0_20230525122132_init.py  1_20230525131038_update.py  2_20230525193858_update.py
backend/postgres/: __init__.py  config.py
backend/postgres/models/: __init__.py  post.py  user.py
frontend/: Dockerfile  package-lock.json  package.json  types.ts
frontend/app/: AuthContext.tsx  LandingPage.tsx  Navbar.tsx  globals.css  layout.tsx  page.tsx
frontend/app/feed/: page.tsx  render.tsx
frontend/app/feed/[id]/: page.tsx
frontend/app/posts/: page.tsx  posts.tsx
frontend/app/posts/create/: page.tsx
frontend/app/posts/edit/[id]/: EditForm.tsx  page.tsx
